k8s/longhorn/longhorn-basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  ingressClassName: traefik  # We use Traefik as the ingress controller
  rules:
    - host: archie.zapto.org  # The domain by which we'll access Longhorn UI
      http:
        paths:
          - path: /longhorn-ui
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend  # Service managing Longhorn dashboard
                port:
                  number: 80
