k8s/longhorn/longhorn-ui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-ui-auth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-ui-login

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: set-fwd-proto-header
  namespace: longhorn-system
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"

---

# This allows the server serving up the UI to get the
# correct URLs for the websocket portion of the backend.
#
# Websocket URLs, as sent through, are relative to the 
# backend server root, not to the domain root. The poor 
# Nginx simply doesn't know what to do with any requests 
# that start with /longhorn-ui that want a WS connection.
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-lh-prefix
  namespace: longhorn-system
spec:
  stripPrefix:
    prefixes:
      - /longhorn-ui

---

kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations:
    cert-manager.io/issuer: "letsencrypt-issuer"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: longhorn-tls-auto
  routes:
    - kind: Rule
      match: Host(`archie.zapto.org`) && ( PathPrefix(`/longhorn-ui`) || HeaderRegexp(`Referer`, `^http(s)?://archie.zapto.org/longhorn-ui`) )
      middlewares:
      - name: longhorn-ui-auth
        namespace: longhorn-system
      - name: strip-lh-prefix
        namespace: longhorn-system
      services:
      - name: longhorn-frontend
        namespace: longhorn-system
        passHostHeader: true
        port: 80
