k8s/longhorn/longhorn-ui-ingress2.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: longhorn-frontend
  namespace: longhorn-system

spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`archie.zapto.org`) && PathPrefix(`/longhorn-ui`) # Replace the {YOUR-DNS} with a DNS pointing to your cluster
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 8000
